--- a/md/index.html
+++ b/md/index.html
@@ -493,8 +493,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section id="vertical-slide-2" class="slide level2">
 <h2>Vertical Slide 2</h2>
 </section></section>
-<section><section id="horizontal-slide-2" class="titleslide slide level1"><h1>Horizontal Slide 2</h1></section><section id="embed-a-web-page-as-a-background" class="slide level2" data-background-iframe="https://example.com">
-<h2>Embed a web page as a background</h2>
+<section><section id="horizontal-slide-2" class="titleslide slide level1"><h1>Horizontal Slide 2</h1></section><section id="section" class="slide level2" data-background-iframe="https://example.com">
+<h2></h2>
+</section><section id="section-1" class="slide level2" data-background-iframe="https://www.youtube.com/embed/nXY6PxAaOk0">
+<h2></h2>
+</section><section id="section-2" class="slide level2" data-background-video="kmeans_sim.mp4">
+<h2></h2>
 </section><section id="r-markdown" class="slide level2">
 <h2>R Markdown</h2>
 <p>This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
