--- a/md/index.html
+++ b/md/index.html
@@ -634,10 +634,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section id="vale-la-pena-este-trabajo-previo" class="slide level2">
 <h2>¿Vale la pena este trabajo previo?</h2>
 <ul>
-<li class="fragment"><p><strong>Sí</strong></p></li>
+<li class="fragment"><strong>Sí</strong></li>
 <li class="fragment">En realidad no es tanto; depende del tamaño del proyecto</li>
-<li class="fragment">Eventualmente se convierte en hábito</li>
-<li class="fragment"><p>El “futuro yo” estará muy agradecido si el proyecto escala</p></li>
+<li class="fragment">Eventualmente se convierte en un hábito</li>
+<li class="fragment">El “futuro yo” estará muy agradecido si el proyecto escala</li>
 </ul>
 </section><section id="preparemos-una-carpeta-para-nuestro-primer-ejercicio" class="slide level2" data-background="#2962C2">
 <h2>Preparemos una carpeta para nuestro primer ejercicio</h2>
@@ -647,7 +647,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <ul>
 <li class="fragment"><p>Identificar en que formato viene el archivo y utilizar el paquete/función que nos va a permitir importarlo:</p>
 <ul>
-<li class="fragment">Para arhivos diferentes a <em>csv</em> podemos usar <code>readxl</code> (Excel) y <code>foreign</code> (SAS o Stata); sin embargo la mayoría de tipos de datos están soportados con algún paquete</li>
+<li class="fragment">Para arhivos diferentes a <em>csv</em> podemos usar <code>readxl</code> (Excel) y <code>foreign</code> (SPSS o Stata); sin embargo la mayoría de tipos de datos están soportados con algún paquete</li>
 </ul></li>
 <li class="fragment"><p>Asignar los datos a un objeto en nuestro ambiente de trabajo</p></li>
 <li class="fragment"><p>Revisar las dimensiones y los nombre de la base que importamos</p></li>
@@ -677,9 +677,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2></h2>
 </section><section id="vamos-a-r-1" class="slide level2" data-background="#2962C2">
 <h2>Vamos a R</h2>
-</section><section id="section-2" class="slide level2" data-background-iframe="https://www.youtube.com/embed/nXY6PxAaOk0">
-<h2></h2>
-</section><section id="section-3" class="slide level2" data-background-video="kmeans_sim.mp4">
+</section><section id="k-means" class="slide level2">
+<h2>K-means</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nXY6PxAaOk0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</section><section id="section-2" class="slide level2" data-background-video="kmeans_sim.mp4">
 <h2></h2>
 </section></section>
 <section><section id="tips" class="titleslide slide level1" data-background="#85C1E9"><h1>Tips</h1></section><section id="en-el-codigo" class="slide level2">
